--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -22,6 +22,7 @@ ball {
 paddle {
     background-image: url(../images/door.png);
     width:133px; height:256px;
+    max-width: 133px; max-height:256px;
 }
 
 background {
