--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1,32 +1,46 @@
+html, body {
+    height: 100%;
+}
+
+script {
+    display: none !important;
+}
+
 body {
-    background-color: rgb(221, 185, 68);
+    background-color: #70CF51;
     font-family: 'Press Start 2P', cursive;
     color:white;
     font-size:22px;
     overflow:hidden;
     margin:0px; padding:0px;
+    background-image: url(../images/polar_bears.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
-game * {
+body * {
     position: absolute;
     display: block;
     box-sizing: border-box;
     background-repeat: no-repeat;
 }
 
+splash {
+    font-size:2em;
+    cursor: pointer;
+    width:500px;
+    height:100px;
+    margin-top:calc(50vh - 50px);
+    margin-left:calc(50vw - 250px);
+    text-align:center;
+}
+
 ball {
     background-image: url(../images/Snowflake72x72.png);
-    width: 72px; height: 72px
+    width:72px; height:72px;
 }
 
 paddle {
     background-image: url(../images/door.png);
-    width:133px; height:256px;
-    max-width: 133px; max-height:256px;
-}
-
-background {
-    background-image: url(../images/polar_bears.jpg);
-    width:100%; height: 100%;
-    background-size: cover;
+    width:130px; height:256px;
 }
