--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1,5 +1,6 @@
 html, body {
     height: 100%;
+    margin: 0px;
 }
 
 script {
@@ -42,5 +43,10 @@ ball {
 
 paddle {
     background-image: url(../images/door.png);
-    width:130px; height:256px;
+    width:130px; height:265px;
+}
+
+paddleupgrade {
+    background-image: url(../images/upgrade_power_up.gif);
+    width:54px; height:96px;
 }
